[package]
name = "interb"
version = "0.1.1"
authors = ["Karesis<yangyifeng23@mails.ucas.ac.cn>"]
edition = "2024"
description = "A high-performance, thread-safe string interner backed by a concurrent bump allocator."
repository = "https://github.com/Karesis/interb"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["interner", "string", "bump", "allocator", "no_std"]
categories = ["data-structures", "memory-management", "text-processing"]

[dependencies]
once_cell = "1.21.3"
rustc-hash = "2.1.1"
